--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon server/index.js"
+    "dev": "nodemon server/index.js",
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jest": "^21.2.1",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "python-shell": "^0.4.0"
   }
 }
